# Stakken

./: .gitignore  CMakeLists.txt
.VSCodeCounter/2021-05-28_04-50-02/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-06-11_21-28-27/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-06-15_05-31-36/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-06-17_16-26-59/: details.md  results.csv  results.md  results.txt
.cache/clangd/index/: Assets.cpp.52D2B93DEDD19431.idx  Assets.h.7DAE000683B9CB1F.idx  BGShader.cpp.EBF3B4A4F7B17353.idx  BGShader.h.46B4B299F47D354F.idx  BaseWidgets.cpp.722DC56ABFCA2FF5.idx  BaseWidgets.h.2FE482104E9F353D.idx  Board.cpp.04B0D4D37410126B.idx  Board.h.D0C1461FFBC97280.idx  Element.h.DE50F95198D45D28.idx  Entry.cpp.802807E8D1A4F420.idx  Entry.h.AC153D67EA697E7D.idx  Font.cpp.F8BB34E19D1EE831.idx  Font.h.2C80AFF028A884EE.idx  Game.h.60D9846652225A20.idx  UI.h.8B6FBC721FC24464.idx  (+36 more)
assetsrc/Fonts/: genFontAtlas.sh
include/: HSV.h  estdint.h  eutility.h  slurp.h
release/: Stakken  settings.cfg
release/Profiles/: Default.pro
release/Replays/: 2021-06-18-00:27:12.rep  2021-06-18-00:49:41.rep  2021-06-18-00:52:21.rep  2021-06-18-02:55:54.rep  2021-06-18-02:59:13.rep  2021-06-18-19:30:26.rep  test.rep
src/: App.cpp  App.h  Entry.cpp  Entry.h  Globals.cpp  Globals.h  Main.cpp
src/Gameplay/: Board.cpp  Board.h  Game.h  Piece.cpp  Piece.h  PieceDefinitions.h  RenderGame.cpp  RenderGame.h  Replay.h  ReplayViewer.h  Tile.h
src/States/: MenuState.h  States.h
src/Systems/: Configuration.h  Identity.h  InputProfile.h  Renderer.cpp  Renderer.h  TetrisAction.h  TetrisInput.h
(+37 files in other folders)
